[gd_scene load_steps=6 format=3 uid="uid://bj1fea7hnawaj"]

[ext_resource type="Script" path="res://Quests/Scripts/quest_journal.gd" id="1_qsirw"]
[ext_resource type="Texture2D" uid="uid://c7qva6oiksy7u" path="res://Assets/UI/PNG/grey_crossGrey.png" id="2_n13mp"]
[ext_resource type="Texture2D" uid="uid://7q1auiukyktk" path="res://Assets/UI/PNG/red_cross.png" id="3_7dmkl"]
[ext_resource type="Texture2D" uid="uid://qqmi2guurrom" path="res://Assets/UI/PNG/yellow_cross.png" id="4_0kwm3"]
[ext_resource type="Texture2D" uid="uid://5m21n8rptkbg" path="res://Assets/UI/PNG/green_checkmark.png" id="5_524h8"]

[node name="QuestJournal" type="CanvasLayer"]
script = ExtResource("1_qsirw")
icons = Array[Texture2D]([ExtResource("2_n13mp"), ExtResource("3_7dmkl"), ExtResource("4_0kwm3"), ExtResource("5_524h8")])

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 650.0
color = Color(0, 0, 0, 0.294118)

[node name="Chooser" type="Panel" parent="."]
offset_right = 1156.0
offset_bottom = 650.0

[node name="QuestList" type="ItemList" parent="Chooser"]
layout_mode = 1
offset_left = 309.0
offset_top = 168.0
offset_right = 903.0
offset_bottom = 471.0

[node name="Requirements" type="ItemList" parent="Chooser/QuestList"]
layout_mode = 0
offset_left = 71.0
offset_top = 65.0
offset_right = 594.0
offset_bottom = 129.0

[node name="CloseButton" type="Button" parent="Chooser"]
layout_mode = 0
offset_left = 547.0
offset_top = 418.0
offset_right = 670.0
offset_bottom = 449.0
text = "Close"

[connection signal="pressed" from="Chooser/CloseButton" to="." method="_on_close_button_pressed"]
